--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -399,92 +399,167 @@
   - [14.1Rich learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Rich_learning)
   - 丰富学习
   - [14.2Micromanaging baby development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Micromanaging_baby_development)
+  - 微观管理婴儿发展
   - [14.3Caging toddlers](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Caging_toddlers)
+  - 限制幼儿
   - [14.4Parental crime #1](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Parental_crime_.231)
+  - 父母的罪过
   - [14.5Preschool drills](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Preschool_drills)
+  - 学前训练
   - [14.6Exposure is good](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Exposure_is_good)
+  - 暴露很好
   - [14.7Summary: Baby management](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Baby_management)
+  - 摘要：婴儿管理
 - 15How baby brain does not work
 - 婴儿的大脑怎样不起作用
   - [15.1Accelerating development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Accelerating_development)
+  - 加快发展
   - [15.2Perfect forgetting machines](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perfect_forgetting_machines)
+  - 完美的遗忘机器
   - [15.3Infantile amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Infantile_amnesia)
+  - 童婴儿健忘症
   - [15.4Brain rewiring](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_rewiring)
+  - 大脑重新布线
   - [15.5Precocity and stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Precocity_and_stress)
+  - 早熟和压力
   - [15.6Precocious genius](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Precocious_genius)
+  - 早熟的天才
   - [15.7Precocity paradox](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Precocity_paradox)
+  - 早熟悖论
   - [15.8Nigeria rules the world!](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Nigeria_rules_the_world.21)
+  - 尼日利亚统治世界！
   - [15.9Summary: baby brain problems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_baby_brain_problems)
+  - 摘要：婴儿大脑的问题
 - 16Childhood amnesia
-- 童年失忆症
+- 童年健忘症
   - [16.1Introduction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Introduction_2)
+  - 介绍
   - 16.2Measuring amnesia
+  - 测量健忘症
     - [16.2.1Methodology problems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Methodology_problems)
+    - 方法论问题
     - [16.2.2Forming first memories](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Forming_first_memories)
+    - 形成第一次记忆
   - 16.3Neurogenesis hypothesis
+  - 神经发生假说
     - [16.3.1Observing a child](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Observing_a_child)
+    - 观察一个儿童
     - [16.3.2Neurogenesis hypothesis](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neurogenesis_hypothesis_2)
+    - 神经发生假说
     - [16.3.3Future research](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Future_research)
+    - 未来的研究
     - [16.3.4Kids have no long-term memory](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_have_no_long-term_memory)
+    - 孩子们没有长期记忆
     - [16.3.5Plasticity-vs-stability trade off](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Plasticity-vs-stability_trade_off)
+    - 可塑性与稳定性的权衡取舍
   - [16.4Measuring infantile amnesia with SuperMemo](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Measuring_infantile_amnesia_with_SuperMemo)
+  - 用 SuperMemo 测量婴儿健忘症
   - [16.5Measurement example](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Measurement_example)
+  - 测量示例
   - [16.6Retrospective recall curve](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Retrospective_recall_curve)
+  - 回顾性记忆曲线
   - [16.7Childhood amnesia: Mechanism](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_amnesia:_Mechanism)
+  - 童年健忘症：机制
   - [16.8Childhood amnesia mythology](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_amnesia_mythology)
+  - 关于童年健忘症的错误观念
   - [16.9My first memories](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_first_memories)
+  - 我的第一次记忆
   - [16.10Conclusions for parents](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Conclusions_for_parents)
+  - 给父母的结论
   - [16.11Summary: Childhood amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Childhood_amnesia)
+  - 摘要：童年健忘症
 - 17Daycare misery
 - 幼儿园的苦难
   - [17.1Benefits of daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Benefits_of_daycare)
+  - 幼儿园的好处
   - [17.2Social pressure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Social_pressure)
+  - 社会压力
   - 17.3Problem of daycare
+  - 幼儿园的问题
     - [17.3.1Problem 1: Sleep hygiene](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Problem_1:_Sleep_hygiene)
+    - 问题一：睡眠健康
     - [17.3.2Problem 2: Child stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Problem_2:_Child_stress)
+    - 问题二：儿童压力
     - [17.3.3Vicious circle: positive feedback loop](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Vicious_circle:_positive_feedback_loop)
+    - 恶性循环：正反馈循环
   - [17.4Physiological acceleration](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Physiological_acceleration)
+  - 生理上的加速
   - [17.5Daycare: The verdict](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Daycare:_The_verdict)
+  - 幼儿园：结论
   - [17.6Feminist perspective](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Feminist_perspective)
+  - 女权主义的观点
   - [17.7Summary: Daycare misery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Daycare_misery)
+  - 摘要：幼儿园的苦难
 - 18Stress resilience
+- 压力恢复力
   - [18.1Good stress and bad stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Good_stress_and_bad_stress)
+  - 良性压力和恶性压力
   - [18.2Global loss of IQ](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Global_loss_of_IQ)
+  - 全球智商下降
   - [18.3Resistance to chronic stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Resistance_to_chronic_stress)
+  - 抵抗慢性压力
   - [18.4Adaptation to stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Adaptation_to_stress)
+  - 适应压力
   - 18.5Preparation for adulthood
+  - 成年的准备
     - [18.5.1Stress resilience training](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience_training)
+    - 压力恢复力训练
     - [18.5.2Discipline training](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Discipline_training)
+    - 自律训练
   - [18.6Homeschooler's sleep](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Homeschooler.27s_sleep)
+  - 在家上学者的睡眠
   - [18.7Optimum stress exposure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimum_stress_exposure)
+  - 最佳压力接触
   - [18.8Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience_2)
+  - 压力恢复力
   - [18.9Summary: Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Stress_resilience)
+  - 摘要：压力恢复力
 - 19Childhood passions
 - 童年激情
   - [19.1Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_passions_2)
+  - 童年激情
   - [19.2School notebooks](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_notebooks)
+  - 学校笔记本
   - [19.3Notes in pictures](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Notes_in_pictures)
+  - 图片中的标注
   - [19.4Single event can spark a passion](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Single_event_can_spark_a_passion)
+  - 单个事件可以激发激情
   - [19.5Remembering for half-a-century](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Remembering_for_half-a-century)
+  - 记住半个世纪
   - [19.6Schooling can easily kill passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schooling_can_easily_kill_passions)
+  - 上学很轻易地扼杀激情
   - [19.7Summary: Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Childhood_passions)
+  - 摘要：童年激情
 - 20Why kids hate school?
-- 为什么孩子讨厌上学？
+- 为什么孩子们讨厌学校？
   - [20.1Experts confirm: kids don't like school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Experts_confirm:_kids_don.27t_like_school)
+  - 专家证实：孩子们不喜欢学校
   - [20.2My own investigation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_own_investigation)
+  - 我自己的调查
   - [20.3Top 11: What kids hate most about school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Top_11:_What_kids_hate_most_about_school)
+  - 孩子们讨厌学校最重要的 11 个原因
   - 20.4Why kids like school?
+  - 为什么孩子们喜欢学校
     - [20.4.1Freddy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Freddy)
+    - Freddy
     - [20.4.2Arian](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Arian)
+    - Arian
   - [20.5Summary: Why kids hate school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Why_kids_hate_school)
+  - 摘要：为什么孩子们讨厌学校
 - 21Mountain climb metaphor
 - 爬山类比
   - [21.1Education is a mountain to climb](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Education_is_a_mountain_to_climb)
+  - 教育是一座可以攀登的山峰
   - [21.2Hindsight is not 20/20](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hindsight_is_not_20.2F20)
+  - 后见之明不是完美的
   - 21.3Mountain climb example
+  - 登山的例子
     - [21.3.1Cultivating childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Cultivating_childhood_passions)
+    - 培养童年激情
     - [21.3.2Replicating passions at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Replicating_passions_at_school)
+    - 在学校复现激情
   - [21.4Parody of the future](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Parody_of_the_future)
+  - 未来的拙劣模仿
 - [22Glossary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Glossary)
 - [术语表](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/22.Glossary%E6%9C%AF%E8%AF%AD%E8%A1%A8.md)
 - [23References](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#References)
