--- a/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
@@ -265,7 +265,7 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - children [rarely recall](https://supermemo.guru/wiki/Childhood_amnesia) memories from before the age of 2-3
 - 儿童几乎回忆不起 2 - 3 岁以前的记忆
 - children form episodic and declarative memories from birth. The term "[childhood amnesia](https://supermemo.guru/wiki/Childhood_amnesia)" refers to rapid memory turnover in childhood
-- 儿童从出生起就形成断断续续的陈述性记忆。「童年失忆症」一词指的是儿童时期的快速记忆转换
+- 儿童从出生起就形成断断续续的陈述性记忆。「童年健忘症」一词指的是儿童时期的快速记忆转换
 - lifetime survival of early memories depends on (1) memory formation, (2) forgetting, (3) interference, (4) re-wiring, (5) exposure to memorable events, and (6) post exposure review
 - 早期记忆的终生保留取决于(1)记忆的形成，(2)遗忘，(3)干扰，(4)重新连接，(5)接触难忘的事件，和(6)接触后的回顾
 - earliest memories are often unpleasant (e.g. related to [daycare](https://supermemo.guru/wiki/Daycare_misery))
