Content 补充链接至 5.9

--- a/I would never send my kids to school我再也不会把孩子送去学校/04.Learn drive学习内驱力.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/04.Learn drive学习内驱力.md
@@ -70,7 +70,7 @@ The term **curiosity** could be used instead of the learn drive. It has a precis
 
 **Disposition to seek knowledge** is a rare term that has never been properly defined. It is used by experts such as [Dr Lilian Katz](https://en.wikipedia.org/wiki/Lilian_Katz). The term is pretty fitting, however, it is inconveniently long and *disposition* is far less accurate than *drive*. *Drive* is better at expressing the innate nature of the phenomenon. In addition, *knowledge seeking* is a term often used in the field of information retrieval.
 
-**求知倾向**（Disposition to seek knowledge）是一个罕见的、从未被定义过的术语。一些专家比如 [Lilian Katz 博士](https://en.wikipedia.org/wiki/Lilian_Katz)有用过这个词。这个词很合适，但是它太长了，而且倾向远不如内驱力准确。内驱力更善于表达现象的本质。此外，knowledge seeking 是信息检索领域经常使用的一个术语。
+**求知倾向**是一个罕见的、从未被定义过的术语。一些专家比如 [Lilian Katz 博士](https://en.wikipedia.org/wiki/Lilian_Katz)有用过这个词。这个词很合适，但是它太长了，而且倾向远不如内驱力准确。内驱力更善于表达现象的本质。此外，knowledge seeking 是信息检索领域经常使用的一个术语。
 
 **Need for cognition** as the name implies is wider than the learn drive. Playing checkers may satisfy one's need for cognition, but it may easily fail to satisfy the learn drive. The term *need for cognition* overlaps with a subset of curiosity labelled *intellectual curiosity*. Both fail to precisely cover the conditions listed for the learn drive.
 
